infrastructure/kubernetes/renderred/clusters/development/resources/kubeprometheusstack/Charts/kube-prometheus-stack/ValidatingWebhookConfiguration/kube-prometheus-stack-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
    annotations: null
    labels:
        app: kube-prometheus-stack-admission
        app.kubernetes.io/component: prometheus-operator-webhook
        app.kubernetes.io/instance: kube-prometheus-stack
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
        app.kubernetes.io/part-of: kube-prometheus-stack
        app.kubernetes.io/version: 82.15.1
        chart: kube-prometheus-stack-82.15.1
        heritage: Helm
        release: kube-prometheus-stack
    name: kube-prometheus-stack-admission
webhooks:
    - admissionReviewVersions:
        - v1
        - v1beta1
      clientConfig:
        service:
            name: kube-prometheus-stack-operator
            namespace: kube-prometheus-stack
            path: /admission-prometheusrules/validate
      failurePolicy: Ignore
      name: prometheusrulevalidate.monitoring.coreos.com
      rules:
        - apiGroups:
            - monitoring.coreos.com
          apiVersions:
            - '*'
          operations:
            - CREATE
            - UPDATE
          resources:
            - prometheusrules
      sideEffects: None
      timeoutSeconds: 10
    - admissionReviewVersions:
        - v1
        - v1beta1
      clientConfig:
        service:
            name: kube-prometheus-stack-operator
            namespace: kube-prometheus-stack
            path: /admission-alertmanagerconfigs/validate
      failurePolicy: Ignore
      name: alertmanagerconfigsvalidate.monitoring.coreos.com
      rules:
        - apiGroups:
            - monitoring.coreos.com
          apiVersions:
            - v1alpha1
          operations:
            - CREATE
            - UPDATE
          resources:
            - alertmanagerconfigs
      sideEffects: None
      timeoutSeconds: 10
